tests/tooling/fixtures/native/recovery/negative/negative_assignment_compound_shift_rhs_bool.objc3
// Expected diagnostic code(s): O3S206.
module NegativeAssignmentCompoundShiftRhsBool;

fn main() -> i32 {
  let value = 2;
  let flag = true;
  value <<= flag;
  return value;
}
